--- a/P20150605/P20150605/.project
+++ b/P20150605/P20150605/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>p20150605_2</name>
+	<name>p20150605</name>
 	<comment></comment>
 	<projects>
 	</projects>
